@@ -2,6 +2,8 @@
 
 	* mini-gmp/mini-gmp.c: merge mpz_rootrem and mpz_sqrtrem.
 
+	* mpn/generic/sqrtrem.c (invsqrttab): Reduce size removing common byte.
+
 2012-05-08  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/minithres/gmp-mparam.h (REDC_1_TO_REDC_N_THRESHOLD): Up to 9, for
